# fermi_relations

./: README.rst  pyproject.toml  setup.py
.github/workflows/: ci.yml
fermi_relations/: __init__.py  fermionic_operators.py  fermiops.py  fock.py  majorana.py  majorana_operators.py  rdm.py  slater.py  tensor_product.py  third_quantization.py  util.py
tests/: test_commutators.py  test_double_factorization.py  test_fermionic_operators.py  test_fock.py  test_hubbard_stratonovich.py  test_majorana.py  test_majorana_operators.py  test_reduced_density_matrices.py  test_slater_determinants.py  test_tensor_hypercontraction.py  test_tensor_product.py  test_third_quantization.py
tutorials/: 1_fermionic_operators.ipynb  2_orbital_basis_rotation.ipynb  3_slater_determinants.ipynb  4_free_fermion_models.ipynb  5_hubbard_stratonovich.ipynb  6_majorana_operators.ipynb  7_majorana_propagation.ipynb  8_swap_network.ipynb  9_natural_orbitals.ipynb
